--- a/Medium/menu.css
+++ b/Medium/menu.css
@@ -3,11 +3,46 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+}
+
 .products {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
+}
+
+li {
+  background-color: white;
+  border: 2px solid black;
+}
+
+.prod1 {
+  grid-area: 1 / 1;
+}
+
+.prod2 {
+  grid-area: 1 / 2;
+}
+
+h1 {
+  text-align: center;
+  color: #da9dfd;
+}
+
+p {
+  font-size: 1em;
+  color: rgb(60, 39, 79);
+  text-align: center;
+}
+
+h3 {
+  color: rgb(32, 97, 130);
+  text-align: center;
 }
 
 img {
-  max-width: 100%;
+  max-width: 300px;
+  max-height: 300px;
 }
