--- a/Easy/flag.css
+++ b/Easy/flag.css
@@ -1,66 +1,69 @@
-/* #flag-cont {
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  background-color: red;
-}
-
-img {
-  grid-area: 1;
-  height: 100px;
-  width: 100px;
-}
-
-.stripe:nth-child(odd) {
-  background-color: red;
-}
-
-.stripe:nth-child(even) {
-  background-color: white;
-}
-
-.stripe:nth-child(1),
-.stripe:nth-child(2),
-.stripe:nth-child(3),
-.stripe:nth-child(4),
-.stripe:nth-child(5),
-.stripe:nth-child(6),
-.stripe:nth-child(7) {
-  grid-column-start: 2;
-  grid-column-end: 3;
-} */
-
-#grid {
+* {
   padding: 0;
-  margin: 0;
+  border: 0;
+}
+
+.parent {
   display: grid;
-  height: 100px;
-  grid-template-columns: 100px 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
-#stars {
-  grid-area: 1;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 
-#stA {
+.div1 {
+  grid-area: 1 / 1 / 8 / 2;
+}
+.div2 {
+  grid-area: 1 / 2 / 2 / 3;
+  background-color: red;
+}
+.div3 {
+  grid-area: 2 / 2 / 3 / 3;
+  background-color: white;
+}
+.div4 {
+  grid-area: 3 / 2 / 4 / 3;
+  background-color: red;
+}
+.div5 {
+  grid-area: 4 / 2 / 5 / 3;
+  background-color: white;
+}
+.div6 {
+  grid-area: 5 / 2 / 6 / 3;
+  background-color: red;
+}
+.div7 {
+  grid-area: 6 / 2 / 7 / 3;
+  background-color: white;
+}
+.div8 {
+  grid-area: 7 / 2 / 8 / 3;
   background-color: red;
 }
 
-#stB {
-  background-color: white;
+.stripes {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  align-content: stretch;
 }
-
-#stC {
+.red1,
+.red2,
+.red3 {
   background-color: red;
+  height: 25px;
 }
 
-#stD {
+.white1,
+.white2,
+.white3 {
   background-color: white;
-}
-#stE {
-  background-color: red;
 }
 
-#stF {
-  background-color: white;
+li {
+  padding: 25px;
 }
